[PAY-1660] Fix layout issues with TrackTile socials row with a lot of stats (#3815)

--- a/apps/audius-client/packages/web/src/components/track/desktop/ConnectedTrackTile.module.css
+++ b/apps/audius-client/packages/web/src/components/track/desktop/ConnectedTrackTile.module.css
@@ -81,7 +81,8 @@
 
 .socialInfo {
   display: inline-flex;
-  width: 100%;
+  flex: 1 1 100%;
+  min-width: 0;
   justify-content: flex-start;
 }
 
